reactor: split into files

--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -8,16 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <script src="../node_modules/lit/polyfill-support.js"></script>
     <script type="module" src="../dist/components/button/index.js"></script>
-    <script type="module" src="../dist/components/button/el-buttons-demo.js"></script>
-    <style>
-      p {
-        border: solid 1px blue;
-        padding: 8px;
-      }
-    </style>
+    <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
   </head>
   <body>
-    <el-buttons-demo></el-buttons-demo>
-   
+    <hy-buttons-demo></hy-buttons-demo>
   </body>
 </html>
