--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -9,6 +9,11 @@
     <script src="../node_modules/lit/polyfill-support.js"></script>
     <script type="module" src="../dist/components/button/index.js"></script>
     <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
+    <style>
+      /*:root{
+        --hybrid-button-primary-background-color : red
+      }*/
+    </style>
   </head>
   <body>
     <hy-buttons-demo></hy-buttons-demo>
