--- a/dev/datepicker.html
+++ b/dev/datepicker.html
@@ -9,14 +9,10 @@
     <script src="../node_modules/lit/polyfill-support.js"></script>
     <script type="module" src="../dist/components/icon/index.js"></script>
     <script type="module" src="../dist/components/button/index.js"></script>
-    <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
-    <style>
-      /*:root{
-        --hybrid-button-primary-background-color : red
-      }*/
-    </style>
+    <script type="module" src="../dist/components/datepicker/index.js"></script>
+    <script type="module" src="../dist/components/datepicker/demo/date-picker-demo.js"></script>
   </head>
   <body>
-    <hy-buttons-demo></hy-buttons-demo>
+    <hy-date-picker-demo></hy-date-picker-demo>
   </body>
 </html>
