--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <a href="/dev/index.html">Component Demo</a>
     <a href="/dev/buttons.html">Buttons Demo</a>
+    <a href="/dev/input.html">input Demo</a>
   </body>
 </html>
