--- a/dev/input.html
+++ b/dev/input.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
     <script src="../node_modules/lit/polyfill-support.js"></script>
     <script type="module" src="../dist/components/icon/index.js"></script>
+    <script type="module" src="../dist/components/input/index.js"></script>
     <script type="module" src="../dist/components/button/index.js"></script>
-    <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
+    <script type="module" src="../dist/components/input/demo/input-demo.js"></script>
     <style>
       /*:root{
         --hybrid-button-primary-background-color : red
@@ -17,6 +18,6 @@
     </style>
   </head>
   <body>
-    <hy-buttons-demo></hy-buttons-demo>
+    <hy-inputs-demo></hy-inputs-demo>
   </body>
 </html>
