--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>&lt;my-element> Demo</title>
-    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <script src="../node_modules/lit/polyfill-support.js"></script>
-    <script type="module" src="../dist/components/icon/index.js"></script>
-    <script type="module" src="../dist/components/button/index.js"></script>
-    <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
-    <style>
-      /*:root{
+
+<head>
+  <meta charset="utf-8" />
+  <title>&lt;hy-button> Demo</title>
+  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+  <script src="../node_modules/lit/polyfill-support.js"></script>
+  <script type="module" src="../dist/components/icon/index.js"></script>
+  <script type="module" src="../dist/components/button/index.js"></script>
+  <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
+  <style>
+    /*:root{
         --hybrid-button-primary-background-color : red
       }*/
-    </style>
-  </head>
-  <body>
-    <hy-buttons-demo></hy-buttons-demo>
-  </body>
+  </style>
+</head>
+
+<body>
+  <hy-buttons-demo></hy-buttons-demo>
+</body>
+
 </html>
