build: bump package

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Lit Starter Kit</title>
-  </head>
-  <body>
-    <a href="/dev/index.html">Component Demo</a>
-    <a href="/dev/buttons.html">Buttons Demo</a>
-    <a href="/dev/input.html">input Demo</a>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Lit Starter Kit</title>
+</head>
+
+<body>
+  <h1>Hybrid UI Components</h1>
+  <div><a href="/dev/buttons.html">Buttons Demo</a></div>
+  <div><a href="/dev/input.html">input Demo</a></div>
+  <div> <a href="http://hybridui.github.io/docs/docs/components/icons" target="_blank">icon Demo</a></div>
+  <div> <a href="/dev/datepicker.html">datepicker Demo</a></div>
+</body>
+
 </html>
