feat: add css vars

--- a/dev/dropdown.html
+++ b/dev/dropdown.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>&lt;hy-button> Demo</title>
+  <title>&lt;hy-dropdown> Demo</title>
   <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <script src="../node_modules/lit/polyfill-support.js"></script>
