feat: add components

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <div><a href="/dev/input.html">input Demo</a></div>
   <div> <a href="http://hybridui.github.io/docs/docs/components/icons" target="_blank">icon Demo</a></div>
   <div> <a href="/dev/datepicker.html">datepicker Demo</a></div>
-  <div> <a href="/dev/dropdown.html">dropdown.html Demo</a></div>
+  <div> <a href="/dev/dropdown.html">dropdown Demo</a></div>
+  <div> <a href="/dev/menu.html">menu Demo</a></div>
+  <div> <a href="/dev/tabs.html">tabs Demo</a></div>
+  <div> <a href="/dev/tooltips.html">tooltips Demo</a></div>
 </body>
 
 </html>
