--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <div> <a href="/dev/menu.html">menu Demo</a></div>
   <div> <a href="/dev/tabs.html">tabs Demo</a></div>
   <div> <a href="/dev/tooltips.html">tooltips Demo</a></div>
+  <div> <a href="/dev/modal.html">modal Demo</a></div>
+  <div> <a href="/dev/select.html">select Demo</a></div>
+  <div> <a href="/dev/radio.html">radio Demo</a></div>
 </body>
 
 </html>
