feature: add dark mode

--- a/dev/input.html
+++ b/dev/input.html
@@ -16,6 +16,11 @@
     /*:root{
         --hybrid-button-primary-background-color : red
       }*/
+      @media (prefers-color-scheme: dark) {
+        body {
+          background: black;
+        }
+      }
   </style>
 </head>
 
