--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <div> <a href="/dev/modal.html">modal Demo</a></div>
   <div> <a href="/dev/select.html">select Demo</a></div>
   <div> <a href="/dev/radio.html">radio Demo</a></div>
+  <div> <a href="/dev/colorpicker.html">color Demo</a></div>
 </body>
 
 </html>
