feature: start supporting dark mode

--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -12,9 +12,11 @@
   <script type="module" src="../dist/components/button/index.js"></script>
   <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
   <style>
-    /*:root{
-        --hybrid-button-primary-background-color : red
-      }*/
+    @media (prefers-color-scheme: dark) {
+        body {
+          background: black;
+        }
+      }
   </style>
 </head>
 
