feat: add slider input

--- a/dev/colorpicker.html
+++ b/dev/colorpicker.html
@@ -11,6 +11,7 @@
   <script type="module" src="../dist/components/icon/index.js"></script>
   <script type="module" src="../dist/components/colorpicker/index.js"></script>
   <script type="module" src="../dist/components/dropdown/index.js"></script>
+  <script type="module" src="../dist/components/input/index.js"></script>
   <script type="module" src="../dist/components/colorpicker/demo/color-picker-demo.js"></script>
   <style>
     /*:root{
