--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <div> <a href="/dev/select.html">select Demo</a></div>
   <div> <a href="/dev/radio.html">radio Demo</a></div>
   <div> <a href="/dev/colorpicker.html">color Demo</a></div>
+  <div> <a href="/dev/slider-input.html">slider-input Demo</a></div>
+  
 </body>
 
 </html>
