--- a/dev/dropdown.html
+++ b/dev/dropdown.html
@@ -12,9 +12,11 @@
   <script type="module" src="../dist/components/dropdown/index.js"></script>
   <script type="module" src="../dist/components/dropdown/demo/hy-dropdowns-demo.js"></script>
   <style>
-    /*:root{
-        --hybrid-button-primary-background-color : red
-      }*/
+     @media (prefers-color-scheme: dark) {
+        body {
+          background: black;
+        }
+      }
   </style>
 </head>
 
