--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <div> <a href="/dev/radio.html">radio Demo</a></div>
   <div> <a href="/dev/colorpicker.html">color Demo</a></div>
   <div> <a href="/dev/slider-input.html">slider-input Demo</a></div>
+  <div> <a href="/dev/checkbox.html">checkbox Demo</a></div>
+  <div> <a href="/dev/table.html">table Demo</a></div>
+  <div> <a href="/dev/toast.html">toast Demo</a></div>
   
 </body>
 
