--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Lit Starter Kit</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Lit Starter Kit</title>
-</head>
-
-<body>
-  <h1>Hybrid UI Components</h1>
-  <div><a href="/dev/buttons.html">Buttons Demo</a></div>
-  <div><a href="/dev/input.html">input Demo</a></div>
-  <div> <a href="http://hybridui.github.io/docs/docs/components/icons" target="_blank">icon Demo</a></div>
-  <div> <a href="/dev/datepicker.html">datepicker Demo</a></div>
-  <div> <a href="/dev/dropdown.html">dropdown Demo</a></div>
-  <div> <a href="/dev/menu.html">menu Demo</a></div>
-  <div> <a href="/dev/tabs.html">tabs Demo</a></div>
-  <div> <a href="/dev/tooltips.html">tooltips Demo</a></div>
-  <div> <a href="/dev/modal.html">modal Demo</a></div>
-  <div> <a href="/dev/select.html">select Demo</a></div>
-  <div> <a href="/dev/radio.html">radio Demo</a></div>
-  <div> <a href="/dev/colorpicker.html">color Demo</a></div>
-  <div> <a href="/dev/slider-input.html">slider-input Demo</a></div>
-  <div> <a href="/dev/checkbox.html">checkbox Demo</a></div>
-  <div> <a href="/dev/table.html">table Demo</a></div>
-  <div> <a href="/dev/toast.html">toast Demo</a></div>
-  
-</body>
-
+  <body>
+    <h1>Hybrid UI Components</h1>
+    <div><a href="/dev/buttons.html">Buttons Demo</a></div>
+    <div><a href="/dev/input.html">input Demo</a></div>
+    <div><a href="/dev/icon.html">icon Demo</a></div>
+    <div><a href="/dev/datepicker.html">datepicker Demo</a></div>
+    <div><a href="/dev/dropdown.html">dropdown Demo</a></div>
+    <div><a href="/dev/menu.html">menu Demo</a></div>
+    <div><a href="/dev/tabs.html">tabs Demo</a></div>
+    <div><a href="/dev/tooltips.html">tooltips Demo</a></div>
+    <div><a href="/dev/modal.html">modal Demo</a></div>
+    <div><a href="/dev/select.html">select Demo</a></div>
+    <div><a href="/dev/radio.html">radio Demo</a></div>
+    <div><a href="/dev/colorpicker.html">color Demo</a></div>
+    <div><a href="/dev/slider-input.html">slider-input Demo</a></div>
+    <div><a href="/dev/checkbox.html">checkbox Demo</a></div>
+    <div><a href="/dev/table.html">table Demo</a></div>
+    <div><a href="/dev/toast.html">toast Demo</a></div>
+  </body>
 </html>
