--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -12,16 +12,64 @@
   <script type="module" src="../dist/components/button/index.js"></script>
   <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
   <style>
-    @media (prefers-color-scheme: dark) {
-        body {
-          background: black;
-        }
-      }
-  </style>
-</head>
 
-<body>
-  <hy-buttons-demo></hy-buttons-demo>
+      html {
+        --background-color: white;
+        --text-color: black;
+      }
+
+      [data-theme='dark'] {
+        --background-color: black;
+        --text-color: white;
+      }
+
+      body {
+        background-color: var(--background-color);
+        color: var(--text-color);
+      }
+
+      #theme-toggle {
+        position: fixed;
+        top: 10px;
+        right: 10px;
+        padding: 10px;
+        background: var(--text-color);
+        color: var(--background-color);
+        border: none;
+        cursor: pointer;
+      }
+    </style>
+  </head>
+
+  <body>
+    <hy-buttons-demo></hy-buttons-demo>
+    <button id="theme-toggle">Toggle Theme</button>
+
+    <script>
+      document.addEventListener('DOMContentLoaded', function () {
+        const themeToggle = document.getElementById('theme-toggle');
+        const savedTheme = localStorage.getItem('theme');
+        if (savedTheme) {
+          document.body.setAttribute('data-theme', savedTheme);
+        } else {
+          if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+            document.body.setAttribute('data-theme', 'dark');
+          } else {
+            document.body.setAttribute('data-theme', 'light');
+          }
+        }
+
+        themeToggle.addEventListener('click', function () {
+          const currentTheme = document.body.getAttribute('data-theme');
+          const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+          document.body.setAttribute('data-theme', newTheme);
+          localStorage.setItem('theme', newTheme);
+        });
+      });
+    </script>
 </body>
+</body>
+
+  </body>
 
 </html>
