--- a/dev/input.html
+++ b/dev/input.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
-  <meta charset="utf-8" />
-  <title>&lt;hy-input> Demo</title>
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-  <script src="../node_modules/lit/polyfill-support.js"></script>
-  <script type="module" src="../dist/components/icon/index.js"></script>
-  <script type="module" src="../dist/components/input/index.js"></script>
-  <script type="module" src="../dist/components/button/index.js"></script>
-  <script type="module" src="../dist/components/input/demo/input-demo.js"></script>
-  <style>
-    /*:root{
+  <head>
+    <meta charset="utf-8" />
+    <title>&lt;hy-input> Demo</title>
+    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=IBM Plex Sans" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <script src="../node_modules/lit/polyfill-support.js"></script>
+    <script type="module" src="../dist/components/icon/index.js"></script>
+    <script type="module" src="../dist/components/input/index.js"></script>
+    <script type="module" src="../dist/components/button/index.js"></script>
+    <script type="module" src="../dist/components/input/demo/input-demo.js"></script>
+    <style>
+      /*:root{
         --hybrid-button-primary-background-color : red
       }*/
       @media (prefers-color-scheme: dark) {
         body {
           background: black;
+          color: #ffffff;
         }
       }
-  </style>
-</head>
+    </style>
+  </head>
 
-<body>
-  <hy-inputs-demo></hy-inputs-demo>
-</body>
-
+  <body>
+    <hy-inputs-demo></hy-inputs-demo>
+  </body>
 </html>
