--- a/dev/checkbox.html
+++ b/dev/checkbox.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
-  <meta charset="utf-8" />
-  <title>&lt;hy-button> Demo</title>
-  <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-  <script src="../node_modules/lit/polyfill-support.js"></script>
-  <script type="module" src="../dist/components/checkbox/index.js"></script>
-  <script type="module" src="../dist/components/checkbox/demo/checkbox-demo.js"></script>
-  <style>
-    @media (prefers-color-scheme: dark) {
+  <head>
+    <meta charset="utf-8" />
+    <title>&lt;hy-button> Demo</title>
+    <link href="https://fonts.googleapis.com/css?family=IBM Plex Sans" rel="stylesheet" />
+    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <script src="../node_modules/lit/polyfill-support.js"></script>
+    <script type="module" src="../dist/components/checkbox/index.js"></script>
+    <script type="module" src="../dist/components/checkbox/demo/checkbox-demo.js"></script>
+    <style>
+      @media (prefers-color-scheme: dark) {
         body {
           background: black;
+          color: #ffffff;
         }
       }
-  </style>
-</head>
+    </style>
+  </head>
 
-<body>
-  <hy-checkbox-demo></hy-checkbox-demo>
-</body>
-
+  <body>
+    <hy-checkbox-demo></hy-checkbox-demo>
+  </body>
 </html>
