--- a/dev/tabs.html
+++ b/dev/tabs.html
@@ -12,9 +12,18 @@
   <script type="module" src="../dist/components/tabs/index.js"></script>
   <script type="module" src="../dist/components/tabs/demo/tabs-demo.js"></script>
   <style>
-    /*:root{
-        --hybrid-button-primary-background-color : red
-      }*/
+      html {
+        --theme-bg: white;
+        --theme-color: black;
+      }
+      body[theme='dark'] {
+        --theme-color: white;
+        --theme-bg: black;
+      }
+      body {
+        background-color: var(--theme-bg);
+        color: var(--theme-color);
+      }
   </style>
 </head>
 
