--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <div><a href="/dev/checkbox.html">checkbox Demo</a></div>
     <div><a href="/dev/table.html">table Demo</a></div>
     <div><a href="/dev/toast.html">toast Demo</a></div>
+    <div><a href="/dev/image.html">Image Demo</a></div>
+
   </body>
 </html>
