--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -15,9 +15,11 @@
         --theme-bg: white;
         --theme-color: black;
       }
-      body[theme='dark'] {
-        --theme-color: white;
-        --theme-bg: black;
+      @media (prefers-color-scheme: dark) {
+        body{
+          --theme-color: white;
+          --theme-bg: black;
+        }
       }
       body {
         background-color: var(--theme-bg);
