Add ui-collaps component

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
     <div><a href="/dev/image.html">Image Demo</a></div>
     <div><a href="/dev/carousel.html">Carousel Demo</a></div>
     <div><a href="/dev/card.html">Card Demo</a></div>
+    <div><a href="/dev/collapse.html">Collapse Demo</a></div>
   </body>
 </html>
