Add card component

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <div><a href="/dev/toast.html">toast Demo</a></div>
     <div><a href="/dev/image.html">Image Demo</a></div>
     <div><a href="/dev/carousel.html">Carousel Demo</a></div>
+    <div><a href="/dev/card.html">Card Demo</a></div>
   </body>
 </html>
