Add carousel component

--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
     <div><a href="/dev/table.html">table Demo</a></div>
     <div><a href="/dev/toast.html">toast Demo</a></div>
     <div><a href="/dev/image.html">Image Demo</a></div>
-
+    <div><a href="/dev/carousel.html">Carousel Demo</a></div>
   </body>
 </html>
