--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <h1>Hybrid UI Components</h1>
+    <h1>Nuraly UI Components</h1>
     <div><a href="/dev/buttons.html">Buttons Demo</a></div>
     <div><a href="/dev/input.html">input Demo</a></div>
     <div><a href="/dev/icon.html">icon Demo</a></div>
