rename text-label component to label and update related files for consistency

--- a/dev/label.html
+++ b/dev/label.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>hy-image Demo</title>
     <script src="../node_modules/lit/polyfill-support.js"></script>
-    <script type="module" src="../dist/components/text-label.js"></script>
-    <script type="module" src="../dist/components/text-label/demo/text-label-demo.js"></script>
+    <script type="module" src="../dist/components/label.js"></script>
+    <script type="module" src="../dist/components/text-label/demo/label-demo.js"></script>
     <style>
       html {
         --theme-bg: white;
