feat(canvas): add canvas component and demo, update styles and package.json

--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <div><a href="/dev/carousel.html">Carousel Demo</a></div>
     <div><a href="/dev/card.html">Card Demo</a></div>
     <div><a href="/dev/collapse.html">Collapse Demo</a></div>
+    <div><a href="/dev/canvas.html">Canvas Demo</a></div>
   </body>
 </html>
