--- a/dev/radio.html
+++ b/dev/radio.html
@@ -6,7 +6,7 @@
     <title>&lt;hy-radio> Demo</title>
     <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css?family=IBM Plex Sans" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Ubuntu, Cantarell, "Noto Sans", sans-serif, "system-ui", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, SFProLocalRange" rel="stylesheet" />
     <script src="../node_modules/lit/polyfill-support.js"></script>
     <script type="module" src="../dist/components/icon/index.js"></script>
     <script type="module" src="../dist/components/radio/index.js"></script>
