feat(chatbot): add chatbot component, demo, and update publish workflow

--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
     <div><a href="/dev/card.html">Card Demo</a></div>
     <div><a href="/dev/collapse.html">Collapse Demo</a></div>
     <div><a href="/dev/canvas.html">Canvas Demo</a></div>
+    <div><a href="/dev/chatbot.html">chatbot Demo</a></div>
   </body>
 </html>
