feat(chatbot): update demo title and add viewport meta tag; refactor color picker dropdown positioning; modify tabs component to use mousedown event; enhance chatbot demo with toggle button for direction

--- a/dev/chatbot.html
+++ b/dev/chatbot.html
@@ -3,7 +3,8 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>hy-carousel Demo</title>
+  <title>Chatbot Demo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../node_modules/lit/polyfill-support.js"></script>
   <script type="module" src="../dist/components/chatbot/index.js"></script>
   <script type="module" src="../dist/components/chatbot/demo/chatbot-demo.js"></script>
