feat(chatbot): add constants and interfaces; implement message interface, sender enum, and localization service updates

--- a/dev/datepicker.html
+++ b/dev/datepicker.html
@@ -11,6 +11,7 @@
     <script type="module" src="../dist/components/icon/index.js"></script>
     <script type="module" src="../dist/components/button/index.js"></script>
     <script type="module" src="../dist/components/datepicker/index.js"></script>
+    <script type="module" src="../dist/components/input/index.js"></script>
     <script type="module" src="../dist/components/datepicker/demo/date-picker-demo.js"></script>
     <style>
       @media (prefers-color-scheme: dark) {
