feat(button): renaming hy-button tp nr-button

--- a/dev/buttons.html
+++ b/dev/buttons.html
@@ -9,7 +9,7 @@
     <script src="../node_modules/lit/polyfill-support.js"></script>
     <script type="module" src="../dist/components/icon/index.js"></script>
     <script type="module" src="../dist/components/button/index.js"></script>
-    <script type="module" src="../dist/components/button/demo/hy-buttons-demo.js"></script>
+    <script type="module" src="../dist/components/button/demo/nr-buttons-demo.js"></script>
     <style>
       html {
         --theme-bg: white;
@@ -28,6 +28,6 @@
     </style>
   </head>
   <body>
-    <hy-buttons-demo></hy-buttons-demo>
+    <nr-buttons-demo></nr-buttons-demo>
   </body>
 </html>
